# xp-excel-toolkit

./: .gitignore  CLAUDE.md  create_samples.py  exporter.py  models.py  pyproject.toml  requirements.txt  run_test.py  xls_parser.py  xlsx_parser.py
benchmarks/: bench_large.py  profile_import_phases.py  profile_patch.py  profile_scenarios.py  test_readonly.py
docs/: COOKBOOK.md  architecture-proposal.md  cookbook.md  diff_result_csv.md
examples/pinmap_demo/: README.md  main.py  make_sample.py  pinmap.py
examples/pinmap_demo/pinmap/: __init__.py  api.py  exporter.py  importer.py  models.py
samples/: diff_new.xlsx  diff_old.xlsx  output.xlsx  regmap_output.xlsx  regmap_sample.xlsx  sample.xls  sample.xlsx
scripts/: codegen.py  create_diff_samples.py  create_regmap_sample.py
skill/dsm-skill/: SKILL.md  schema.md
src/dsm/: __init__.py  cli.py  convert.py  diff.py  domain_models.py  exporter.py  merge.py  models.py  parallel.py  patcher.py  splitter.py  xls_parser.py  xlsx_parser.py
src/dsm/diff/: __init__.py  engine.py  formatter.py  models.py
src/dsm/parsers/: __init__.py  level2.py  memorymap.py  overview.py
src/excel_toolkit/: __init__.py  cli.py  convert.py  domain_models.py  exporter.py  merge.py  models.py  parallel.py  patcher.py  splitter.py  xls_parser.py  xlsx_parser.py
src/excel_toolkit/diff/: __init__.py  engine.py  formatter.py  (+1 more)
src/xp_excel_toolkit/: __init__.py  config.py  convert.py  exporter.py  helpers.py  merge.py  models.py  pipeline.py  query.py  xls_parser.py  xlsx_parser.py
tests/: bench_bulk_insert.py  bench_full_pipeline.py  conftest.py  profile_phases.py  test_cli.py  test_convert_xlsx_to_xls.py  test_import_sheet_filter.py  test_poi.py  test_roundtrip.py  test_strikethrough.py  test_structure.py
tests/manual/: MANUAL_TEST.md  case_0_import.py  case_1_parse_sheets.py  case_2_split.py  case_3_modify_export.py
(+17 files in other folders)
