[project]
name = "dsm"
version = "0.2.0"
description = "Design Specification Manager — register map Excel toolkit"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "xlrd>=2.0.1",
    "xlwt>=1.3.0",
]

[project.scripts]
dsm = "dsm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsm"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
