[project]
name = "xp-excel-toolkit"
version = "0.3.0"
description = "Excel ↔ SQLite toolkit — workbook/sheet/cell ORM, parsers, merge resolver"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "xlrd>=2.0.1",
    "xlwt>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xp_excel_toolkit"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
