[project]
name = "xp-excel-toolkit"
version = "0.5.0"
description = "Excel ↔ SQLite toolkit — workbook/sheet/cell ORM, parsers, merge resolver"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "xlrd>=2.0.1",
    "xlwt>=1.3.0",
]

# Apache POI(.xls fidelity edit-in-place) 백엔드 — JVM(jpype) + POI jar 필요(런타임 env XP_POI_JARS).
[project.optional-dependencies]
poi = ["jpype1>=1.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xp_excel_toolkit"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[[tool.uv.index]]
name = "dt-dev"
url = "http://localhost:9780/root/dev/+simple/"
publish-url = "http://localhost:9780/root/dev/"
explicit = true
